--- a/package.json
+++ b/package.json
@@ -5,20 +5,25 @@
   "main": "src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/server.js"
+    "dev:server": "nodemon src/server.js",
+    "dev:queue": "nodemon src/queue.js"
   },
   "author": "Sputnik",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bee-queue": "^1.3.1",
     "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-handlebars": "^5.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.12",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
+    "nodemailer": "^6.4.15",
+    "nodemailer-express-handlebars": "^4.0.0",
     "sequelize": "^6.3.4",
     "yup": "^0.29.3"
   },
