--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "mysql2": "^2.1.0",
     "nodemailer": "^6.4.15",
     "nodemailer-express-handlebars": "^4.0.0",
+    "redis": "^3.0.2",
     "sequelize": "^6.3.4",
+    "socket.io": "^3.0.3",
     "yup": "^0.29.3"
   },
   "devDependencies": {
